# iced-material-icon-browser

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: 2023-09-12-material-icons-meta.json
src/: main.rs  models.rs  styling.rs  text_input_wrapper.rs
